# NeuroServer

./: .cvsignore  .gitignore  AUTHORS  COPYING  Doxyfile  Makefile.am  NEWS  README  configure.ac  configure.in
doc/: design.txt  devguide.dox  devguide.txt  install.txt  lgpl.dox  maindoc.dox  packet-errors.dox  packet-errors.txt  protocol.dox  protocol.txt  warning.dox
doc/www/: index.html
sampleclient/: Makefile  Makefile.mingw  main.c  readme.txt
scripts/: .cvsignore  NeuroServer.iss  NeuroServer.iss.in  makeSetup.sh  makeSetup.sh.in
src/: .cvsignore  Makefile.am  Makefile.mingw  cmdhandler.c  config.h.in  edfmacros.h  modeegdriver.c  monitor.c  neurod.c  neurod.h  neurotest.c  ns2net.c  nsd.c  nsd.h  nsnet.c  nsnet.h  nsrealloc.c  nsser.c  nsser.h  nsutil.c  nsutil.h  ntest.c  opencnvdriver.c  openedf.c  openedf.h  pctimer.c  readedf.c  reader.c  sceegdemod.cc  stringtable.c  stringtable.h  testedf.c  writebdf.c  writeedf.c
src/neuro/: cmdhandler.h  neuro.h  ns2net.h  nsrealloc.h  reader.h  stringtable.h
tests/: common.rb
